# kitty-sessionizer

./: .gitignore  README.md  hello.py  meow.py  pyproject.toml  sessionizer.py  watcher.py
