[project]
name = "kitty-sessionizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.12.1",
    "textual>=1.0.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"
ignore = ["/home/dave/.local/share/uv/python/"]
extraPaths = ["/usr/lib64/kitty/"]
